# navigator-backend

./: .dockerignore  .env.example  .env.local  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  db_state_validator.py  docker-compose.apis.yml  docker-compose.dev.yml  docker-compose.yml  justfile  makefile-docker.defs  makefile-local.defs  pyproject.toml  requirements.txt  service-manifest.json  shipyard.yml  startup.sh  wait_for_port.sh
api/: __init__.py  pyproject.toml  telemetry.py  telemetry_config.py  telemetry_exceptions.py
api/infra/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
api/src/: startup_message.py
api/src/api/: __init__.py  base_telemetry.py  fastapi_telemetry.py  metrics.py  otel.py  prefect_telemetry.py  service_manifest.py  sqlalchemy_telemetry.py  telemetry.py  telemetry_base.py  telemetry_config.py  telemetry_fastapi.py  telemetry_prefect.py  telemetry_utils.py
api/src/observability/: common.py  main.py  registry.py  slo_queries.py
backend-api/: .dockerignore  .env.example  .env.local  .env.test  Dockerfile  Makefile  README.md  docker-compose.dev.yml  makefile-docker.defs  makefile-local.defs  pyproject.toml  service-manifest.json  startup.sh
backend-api/app/: config.py  errors.py  main.py  telemetry.py  telemetry_exceptions.py
backend-api/app/models/: __init__.py  config.py  custom_app.py  document.py  family.py  search.py
backend-api/app/repository/: collection.py  corpus.py  corpus_type.py  document.py  download.py  family.py  geography.py  helpers.py  lookups.py  organisation.py  pipeline.py  search.py  user.py
backend-api/app/service/: auth.py  config.py  custom_app.py  download.py  health.py  pipeline.py  search.py  util.py  vespa.py  world_map.py
backend-api/docs/: custom_apps.md  database.md  docker.md  quickstart.md
backend-api/docs/api/: search.md
backend-api/docs/local_full_stack_setup/: README.md  extract_document_import_ids.py
backend-api/tests/: conftest.py  utils.py
backend-api/tests/non_search/: setup_helpers.py
backend-api/tests/search/: test_search.py
backend-api/tests/unit/: conftest.py
concepts-api/: .gitignore  Dockerfile  README.md  create_duckdb.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt  service-manifest.json
concepts-api/app/: main.py  telemetry.py
concepts-api/infra/: Pulumi.yaml  __main__.py
data-in-api/: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
data-in-api/app/: aws.py  main.py  repository.py  session.py  settings.py
data-in-api/infra/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
data-in-api/scripts/: dev_entrypoint.py
data-in-api/tests/: conftest.py  test_integration.py  test_repository.py  test_routers.py  test_routes.py
data-in-models/: README.md  pyproject.toml
data-in-models/src/: __init__.py  base.py
data-in-pipeline/: Dockerfile  Dockerfile.data-in-load-api  Dockerfile.duckdb  Dockerfile.test  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  service-manifest.json
data-in-pipeline-load-api/: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  service-manifest.json
data-in-pipeline-load-api/app/: Dockerfile  aws.py  main.py  models.py  repository.py  routers.py  session.py  settings.py
data-in-pipeline-load-api/infra/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
data-in-pipeline-load-api/test-infra/: __main__.py
data-in-pipeline-load-api/tests/: conftest.py  test_alembic.py  test_aws.py  test_create_update_db_data.py  test_db_models.py  test_routers.py  test_run_migrations.py  test_upsert_documents.py
data-in-pipeline/app/: __init__.py  bootstrap_telemetry.py  connector.py  connector_config.py  connectors.py  data_in_load_api_deploy.py  data_in_load_api_flow.py  db_models.py  deploy.py  dev.py  ecs_metadata.py  flow.py  geographies.py  log_context.py  logging_config.py  logging_handlers.py  models.py  navigator_document_etl_pipeline.py  navigator_family_etl_pipeline.py  pipeline_metrics.py  prefect_logging.yaml  rfc.py  t.py  util.py
data-in-pipeline/dashboards/: README.md  health_overview.json  run_viewer.json
data-in-pipeline/infra/: Dockerfile  Dockerfile.load_api  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  grants.sql
data-in-pipeline/src/: main.py
data-in-pipeline/tests/: conftest.py  factories.py  test_alembic.py  test_db_models.py  test_document_pipeline.py  test_family_pipeline.py  test_integration.py  test_transformer.py  test_unit.py
data-in-pipeline/ui/: .gitignore  index.html  package-lock.json  package.json
documents-api/: .gitignore  Dockerfile  apprunner.yaml  apprunner.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt
documents-api/app/: main.py
families-api/: Dockerfile  README.md  docker-compose-admin-backend.yml  docker-compose.yml  justfile  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  service-manifest.json
families-api/app/: database.py  gen_openapi_spec.py  main.py  model.py  models.py  router.py  settings.py  test_main.py  utils.py
families-api/infra/: Pulumi.production.yaml  Pulumi.review.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
families-api/just-scripts/: is-container-healthy.sh
families-api/tests/: conftest.py  test_main.py  test_models.py  test_router.py  test_settings.py
geographies-api/: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose-dev.yml  docker-compose.yml  init-s3.sh  justfile  pyproject.toml  requirements.txt  service-manifest.json
geographies-api/app/: main.py  model.py  router.py  s3_client.py  service.py  utils.py
geographies-api/infra/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
geographies-api/just-scripts/: is-container-healthy.sh
geographies-api/tests/: conftest.py  test_countries.py  test_main.py  test_regions.py  test_service.py
review-stack-shared-resources/: Pulumi.yaml  __main__.py  pyproject.toml  pyrightconfig.json
(+848 files in other folders)
