[project]
name = "navigator-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[tool.uv.workspace]
members = [
  "api",
  "concepts-api",
  "families-api",
  "geographies-api",
  "data-in-pipeline-load-api",
  "data-in-pipeline",
  "data-in-models",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
exclude = ["backend-api/**"]
extraPaths = ["api/src"]

[tool.pyright.executionEnvironments]
root = [
  "api/src",
  "concepts-api",
  "families-api",
  "geographies-api",
  "data-in-pipeline-load-api",
  "data-in-pipeline",
  "data-in-models",
]
