[project]
name = "navigator-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv.workspace]
members = [
  "api",
  "data-in-models",
  "concepts-api",
  "families-api",
  "geographies-api",
  "data-in-pipeline-load-api",
  "data-in-pipeline",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
exclude = ["backend-api/**"]
extraPaths = ["api/src"]

[tool.pyright.executionEnvironments]
root = [
  "api/src",
  "data-in-models",
  "concepts-api",
  "families-api",
  "geographies-api",
  "data-in-pipeline-load-api",
  "data-in-pipeline",
]
