[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["CPR tech <tech@climatepolicyradar.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "^3.166.0"
pulumi-aws = "^6.78.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".venv"
include = ["infra"]
