[project]
name = "api"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115.12,<0.116.0",
  "pulumi>=3.166.0,<4.0.0",
  "pulumi-aws>=6.78.0,<7.0.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.21.0,<2.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-sdk>=1.21.0,<2.0.0",
  "opentelemetry-distro>=0.59b0",
  "opentelemetry-instrumentation-logging>=0.59b0",
  "opentelemetry-api>=1.38.0",
]

# This is needed as we want to include this member as a package in another member of the workspace.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
