[project]
name = "backend-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Authlib>=1.6.0",
  "bcrypt>=4.3.0,<5.0.0",
  "boto3>=1.26",
  "cpr-sdk[vespa,datasets]==1.23.4",
  "fastapi>=0.115.8",
  "fastapi-health>=0.4.0",
  "fastapi-pagination[sqlalchemy]>=0.13.2",
  "httpx>=0.28.1",
  "itsdangerous>=2.1.0",
  "json-logging>=1.3.0",
  "pandas>=2.3.0",
  "passlib>=1.7.4",
  "psycopg2-binary>=2.9.10; platform_system != 'Linux'",
  "psycopg2>=2.9.10; platform_system == 'Linux'",
  "PyJWT>=2.3.0",
  "python-multipart>=0.0.20",
  "python-slugify>=6.1.2",
  "requests>=2.32",
  "requests-toolbelt>=1.0.0",
  "SQLAlchemy>=1.4.31",
  "SQLAlchemy-Utils>=0.38.2",
  "starlette==0.40.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.3",
  "botocore>=1.38.37",
  "db-client @ git+https://github.com/climatepolicyradar/navigator-db-client.git@v3.9.21",
  "urllib3<3",
  "apscheduler>=3.10.4",
  "numpy==1.26.4",
  "python-dateutil>=2.9.0.post0",
  "opentelemetry-instrumentation-fastapi>=0.54b0",
  "opentelemetry-sdk>=1.33.0",
  "python-dotenv>=1.1.0",
  "pydantic-settings>=2.9.1",
  "opentelemetry-exporter-otlp>=1.33.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.54b0",
  "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "moto[s3]>=5.1.6",
  "pyright==1.1.361",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-mock>=3.14.1",
  "ruff>=0.11.13",
  "types-SQLAlchemy>=1.4.31",
  "surrogate>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# this is needed for db-client to be installed directly from github
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = ["search: marks tests as search (deselect with '-m \"not search\"')"]
