[tool.poetry]
name = "concepts-api"
version = "0.1.0"
description = ""
authors = ["CPR tech <tech@climatepolicyradar.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.12" }
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
pulumi = "^3.166.0"
pulumi-aws = "^6.78.0"
duckdb = "^1.3.0"
requests = "^2.31.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
opentelemetry-sdk = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".venv"
include = ["app"]
