[project]
name = "concepts-api"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115.12,<0.116.0",
  "sqlmodel>=0.0.24,<0.1.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "pulumi>=3.166.0,<4.0.0",
  "pulumi-aws>=6.78.0,<7.0.0",
  "duckdb>=1.3.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0,<0.46.0",
  "opentelemetry-exporter-otlp>=1.21.0,<2.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0,<0.46.0",
  "opentelemetry-sdk>=1.21.0,<2.0.0",
  "api",
]

[dependency-groups]
prebuild = ["duckdb>=1.3.0", "requests>=2.31.0", "pyyaml>=6.0.2"]

[tool.uv.sources]
api = { workspace = true }
