[project]
name = "data-in-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi[standard]>=0.115.14",
  "pydantic>=2.12.1",
  "pydantic-settings>=2.9.1,<3.0.0",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-utils>=0.42.0",
  "sqlmodel>=0.0.31",
  "data-in-models",
]

[tool.uv.sources]
data-in-models = { workspace = true }
