[project]
name = "data-in-pipeline-load-api"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "pydantic>=2.12.1",
  "pydantic-settings>=2.9.1,<3.0.0",
  "requests>=2.32.5",
  "boto3>=1.40.51",
  "botocore>=1.40.51",
  "fastapi[standard]>=0.115.14",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-utils>=0.42.0",
  "psycopg2-binary>=2.9.11",
  "api"
]

[tool.uv.sources]
api = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.4.2", "types-sqlalchemy>=1.4.53.38", "uv>=0.9.2"]
