[project]
name = "data-in-pipeline-load-api"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.12.1",
  "pydantic-settings>=2.9.1,<3.0.0",
  "requests>=2.32.5",
  "boto3>=1.40.51",
  "botocore>=1.40.51",
  "fastapi[standard]>=0.115.14",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-utils>=0.42.0",
  "psycopg2-binary>=2.9.11",
  "api",
  "alembic>=1.17.0",
  "alembic-utils>=0.8.8",
  "sqlmodel>=0.0.31",
  "data-in-models",
]

[tool.uv.sources]
api = { workspace = true }
data-in-models = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "types-sqlalchemy>=1.4.53.38",
  "uv>=0.9.2",
  "moto[s3,ssm,secretsmanager]>=5.1.6",
  "pytest-alembic>=0.12.1",
  "pytest-mock-resources>=2.12.4",
  "python-on-whales>=0.79.0",
  "testcontainers[postgres]>=4.14.0",
]
