[project]
name = "data-in-pipeline"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "prefect>=3.4",
  "api",
  "uv>=0.9.2",
  "pulumi>=3.202.0",
  "pulumi-aws>=6.83.0",
  "pydantic>=2.12.1",
  "requests>=2.32.5",
  "boto3>=1.40.51",
  "botocore>=1.40.51",
  "returns>=0.26.0",
]

[tool.uv.sources]
api = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.4.2"]
