[project]
name = "data-in-pipeline"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "prefect>=3.4",
  "uv>=0.9.2",
  "pulumi>=3.202.0",
  "pulumi-aws>=6.83.0",
  "pydantic>=2.12.1",
  "requests>=2.32.5",
  "boto3>=1.40.51",
  "botocore>=1.40.51",
  "returns>=0.26.0",
  "duckdb>=1.4.1",
  "fastapi[standard]>=0.115.14",
  "numpy>=2.3.4",
  "pandas>=2.3.3",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-utils>=0.42.0",
  "alembic>=1.17.0",
  "alembic-utils>=0.8.8",
  "psycopg2-binary>=2.9.11",
]


[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-alembic>=0.12.1",
  "pytest-mock-resources>=2.12.4",
  "python-on-whales>=0.79.0",
  "types-sqlalchemy>=1.4.53.38",
]
