[project]
name = "data-in-pipeline"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "api",
  "components>=1.0.3",
  "prefect[aws]>=3.4",
  "uv>=0.9.2",
  "pulumi>=3.202.0",
  "pulumi-aws>=6.83.0",
  "pydantic>=2.12.1",
  "requests>=2.32.5",
  "boto3>=1.40.51",
  "botocore>=1.40.51",
  "returns>=0.26.0",
  "duckdb>=1.4.1",
  "fastapi>=0.115.14",
  "numpy>=2.3.4",
  "pandas>=2.3.3",
  "psycopg2-binary>=2.9.11",
  "opentelemetry-sdk>=1.38.0",
  "opentelemetry-api>=1.38.0",
  "testcontainers[postgres]>=4.14.0",
  "sqlmodel>=0.0.31",
  "pycountry>=24.6.1",
]

[tool.uv.sources]
api = { workspace = true }
components = { git = "https://github.com/climatepolicyradar/infra", subdirectory = "components", tag = "v1.0.5" }


[dependency-groups]
dev = ["pytest>=8.4.2"]
