[tool.poetry]
name = "documents-api"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "^0.115.12", extras = ["standard"] }
sqlmodel = "^0.0.24"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
