[tool.poetry]
name = "families-api"
version = "0.1.0"
description = ""
authors = ["CPR tech <tech@climatepolicyradar.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.12" }
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
psycopg2 = "^2.9.10"
pulumi = "^3.166.0"
pulumi-aws = "^6.78.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
