[project]
name = "families-api"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115.12,<0.116.0",
  "sqlmodel>=0.0.24,<0.1.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "psycopg2>=2.9.10,<3.0.0",
  "pulumi>=3.166.0,<4.0.0",
  "pulumi-aws>=6.78.0,<7.0.0",
  "pytest>=8.4.0,<9.0.0",
  "api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
api = { workspace = true }
