[project]
name = "geographies-api"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
  "fastapi[standard]>=0.115.12,<0.116.0",
  "sqlmodel>=0.0.24,<0.1.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "pulumi>=3.166.0,<4.0.0",
  "pulumi-aws>=6.78.0,<7.0.0",
  "pycountry>=24.6.1,<25.0.0",
  "boto3>=1.38.32,<2.0.0",
  "requests>=2.32.4,<3.0.0",
  "api",
  "python-slugify>=8.0.4",
]

[tool.uv.sources]
api = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.4.0,<9.0.0"]
